<resources>
    <string name="app_name">Lab19-RestGraphs Kashitsin</string>
    <string name="accountName">Логин</string>
    <string name="password">Пароль</string>
    <string name="rememberme">Оставить в системе?</string>
    <string name="registration">Регистрация</string>
    <string name="login">Вход</string>
    <string name="cancel">Отмена</string>
    <string name="graphname">Название</string>
    <string name="server">Облако</string>
    <string name="local">Телефон</string>
    <string name="create">Создать</string>
    <string name="copy">Скопировать</string>
    <string name="load">Загрузить</string>
    <string name="rename">Переименовать</string>
    <string name="delete">Удалить</string>
    <string name="ok">ОК</string>
</resources>